Improved the reading page on mobile devices by aligning the drop down menu such that it stays left of the dropdown caret (which ensures it stays on screen). I also shortened the editor description on phones so that it can reliably be displayed on a single screen.
Closes #553.

--- a/src/media/stylesheets/app.css
+++ b/src/media/stylesheets/app.css
@@ -65,6 +65,17 @@ footer .addthis_toolbox {
 .input-append > .btn-group + .btn-group, .no-left-margin {
   margin-left: -1px; }
 
+/* See http://forrst.com/posts/Bootstrap_right_positioned_dropdown-2KB */
+.dropdown-menu.right {
+  left: auto;
+  right: 0; }
+  .dropdown-menu.right::before {
+    left: auto !important;
+    right: 9px; }
+  .dropdown-menu.right::after {
+    left: auto !important;
+    right: 10px; }
+
 /*
  * Below are some fixes for Darkstrap
  */
